fix(frontend): scroll to bottom overflow-y

--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:wght@300;400;500;600;700;800');
 
 :root {
     --cyan: #00BCD4;
@@ -11,10 +11,10 @@
 
 #root {
     display: flex;
-    justify-content: center;
     align-items: center;
     height: 100vh;
     width: 100%;
+    overflow-y: auto;
 }
 
 *,
@@ -27,15 +27,7 @@ body {
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    background-image: linear-gradient(45deg, var(--mainColorLight), var(--mainColor));
-}
-
-div,
-label,
-input,
-button {
-    font-family: var(--roboto);
-    color: var(--textColor);
+    background-color: #EDE9EF
 }
 
 .container {
@@ -99,13 +91,14 @@ button[class="js-form-btn"] {
     display: block;
     max-width: 150px;
     width: 100%;
-    padding: 10px 10px;
+    padding: 5px 10px;
     border: none;
     border-radius: 5px;
     flex: 1 0 auto;
     background-color: var(--mainColorSecondary);
-    color: var(--textColor);
+    color: var(--logo-background);
     font-size: var(--responsiveButtonWidth);
+    font-weight: 600;
     cursor: pointer;
     -webkit-transition: -webkit-filter .2s ease-in;
     transition: filter 500ms ease-in;
